Update index.html jpg to jpeg

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>Providing trusted legal representation with professionalism and dedication.</p>
         <p>क्यों डरे जिंदगी में क्या होगा, कुछ न होगा तो तजुर्बा होगा! जय श्री राम जय हनुमान 🚩🙏</p>
 
-        <img src="profile.jpg" class="profile-img" alt="Advocate Photo">
+        <img src="profile.jpeg" class="profile-img" alt="Advocate Photo">
     </div>
 </section>
 
@@ -104,5 +104,6 @@
 
 </body>
 </html>
+
 
 
