Update index.html email and name update

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <!-- NAVBAR -->
 <header class="navbar">
-    <h1 class="logo">Adv S.P. Singh</h1>
+    <h1 class="logo">Adv Sooraj Pratap Singh</h1>
     <nav>
         <a href="#about">About</a>
         <a href="#practice">Practice</a>
@@ -59,8 +59,8 @@
     <h2>Professional Experience</h2>
     <ul class="timeline">
         <li>
-            <span>2020 – Present</span>
-            <p>Advocate in District and Session Court</p>
+            <span>2023 – Present</span>
+            <p>Advocate in District and Session Court Auraiya,Uttar Pradesh</p>
         </li>
     </ul>
 </section>
@@ -69,7 +69,7 @@
 <section id="contact" class="section dark">
     <h2>Contact Information</h2>
     <div class="contact-box">
-        <p><strong>Email:</strong> advocate@email.com</p>
+        <p><strong>Email:</strong> surajpratap077@gmail.com</p>
         <p><strong>Phone:</strong> +91 8864880007</p>
         <p><strong>Location:</strong> Auraiya, Uttar Pradesh, India</p>
     </div>
@@ -104,6 +104,7 @@
 
 </body>
 </html>
+
 
 
 
