--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <!-- NAVBAR -->
 <header class="navbar">
-    <h1 class="logo">Adv Sooraj Pratap Singh</h1>
+    <h1 class="logo">Adv Suraj Pratap Singh</h1>
     <nav>
         <a href="#about">About</a>
         <a href="#practice">Practice</a>
@@ -104,6 +104,7 @@
 
 </body>
 </html>
+
 
 
 
